--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # build dependencies
-proxyTestEnv/
-proxyManager.egg-info/
-build/
-dist/
+proxyTestEnv
+proxyManager.egg-info
+build
+dist
 
 proxies.txt
