--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,9 @@ classifiers = [
     ]
 keywords = ["proxy","scraper","web","http"]
 dependencies = [
-    "certifi>=2024.2.2",
-    "charset-normalizer>=3.3.2",
-    "idna>=3.7",
-    "requests>=2.31.0",
-    "urllib3>=2.2.1"
+    "aiohttp-requests>=0.2.4, <1",
+    "urllib3>=2.2.1, <3",
+    "uvloop==0.19.0, <1"
     ]
 requires-python = ">=3.12"
 
