--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,43 @@
+aiodns==3.2.0
+aiohttp==3.9.5
+aiohttp-requests==0.2.4
+aiosignal==1.3.1
+attrs==23.2.0
+Brotli==1.1.0
+build==1.2.1
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+coworker==2.0.1
+cryptography==42.0.5
+docutils==0.21.2
+frozenlist==1.4.1
 idna==3.7
+importlib_metadata==7.1.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+jeepney==0.8.0
+keyring==25.1.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+more-itertools==10.2.0
+multidict==6.0.5
+nh3==0.2.17
+packaging==24.0
+pkginfo==1.10.0
+pycares==4.4.0
+pycparser==2.22
+Pygments==2.17.2
+pyproject_hooks==1.0.0
+readme_renderer==43.0
 requests==2.31.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.1
+SecretStorage==3.3.3
+twine==5.0.0
 urllib3==2.2.1
+uvloop==0.19.0
+yarl==1.9.4
+zipp==3.18.1
